Open necessary packages to the unnamed module
- for configserver and yet another standalone start script